force-app/main/default/objects/BGCK__Answer__c/BGCK__Answer__c.object-meta.xml
<CustomObject>
    <label>Answer</label>
    <nameField>
        <label>Response</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>