force-app/main/default/objects/BGCK__Answer__c/fields/abd_Applicant__c.field-meta.xml
<CustomField>
    <fullName>abd_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>