force-app/main/default/objects/BGCK__Answer__c/fields/abd_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>abd_Date_Value__c</fullName>
    <label>abd Date Value</label>
    <type>Date</type>
</CustomField>