force-app/main/default/objects/BGCK__Answer__c/fields/abd_License__c.field-meta.xml
<CustomField>
    <fullName>abd_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Each answer should be tied to a license for a specific time frame.</description>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>