force-app/main/default/objects/BGCK__Answer__c/fields/abd_License_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_License_Effective_Date__c</fullName>
    <description>This answer is valid on this license beginning on this date.</description>
    <label>License Effective Date</label>
    <type>Date</type>
</CustomField>