force-app/main/default/objects/BGCK__Answer__c/fields/abd_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>abd_License_Expiration_Date__c</fullName>
    <description>This answer is valid for this license until this date is passed.  This field is null if this answer has not expired or been replaced.</description>
    <label>License Expiration Date</label>
    <type>Date</type>
</CustomField>