force-app/main/default/objects/BGCK__Answer__c/fields/abd_License_New_Association__c.field-meta.xml
<CustomField>
    <fullName>abd_License_New_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a temporary field to indicate that this answer was just associated to this license.</description>
    <label>License New Association</label>
    <type>Checkbox</type>
</CustomField>