force-app/main/default/objects/BGCK__Answer__c/fields/abd_Number_Value__c.field-meta.xml
<CustomField>
    <fullName>abd_Number_Value__c</fullName>
    <formula>IF (
ISNUMBER( Name ),
VALUE( Name ) ,
Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>abd Number Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>