force-app/main/default/objects/BGCK__Answer__c/fields/BGCK__Actual_Value2__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Actual_Value2__c</fullName>
    <label>Actual Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>