force-app/main/default/objects/BGCK__Answer__c/fields/BGCK__Actual_Value__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Actual_Value__c</fullName>
    <description>DO NOT USE</description>
    <label>Actual Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>