force-app/main/default/objects/BGCK__Answer__c/fields/BGCK__Case__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>