force-app/main/default/objects/BGCK__Answer__c/fields/BGCK__Comments__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Comments__c</fullName>
    <label>Comments</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>