force-app/main/default/objects/BGCK__Answer__c/fields/BGCK__Contest__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Contest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contest</label>
    <referenceTo>BGCK__Contest__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>