force-app/main/default/objects/BGCK__Answer__c/fields/BGCK__Valid__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Valid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField>