force-app/main/default/objects/BGCK__Answer__c/fields/License_Application__c.field-meta.xml
<CustomField>
    <fullName>License_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License-Application</label>
    <referenceTo>abd_License_Application__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>