force-app/main/default/objects/BGCK__Answer__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>BGCK__Page_Question__r.Display_order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <type>Text</type>
</CustomField>