force-app/main/default/objects/BGCK__Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <formula>BGCK__Page_Question__r.BGCK__Question__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question</label>
    <type>Text</type>
</CustomField>