force-app/main/default/objects/BGCK__Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>abd_License_New_Association__c</columns>
    <columns>abd_License_Effective_Date__c</columns>
    <columns>abd_License_Expiration_Date__c</columns>
    <columns>abd_License__c</columns>
    <columns>Application__c</columns>
    <columns>BGCK__Question__c</columns>
    <columns>BGCK__Page_Question__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>